04-jenkins/network-policies/agents-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jenkins-agents-policy
  namespace: jenkins
spec:
  podSelector:
    matchLabels:
      jenkins/agent: "true"
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: jenkins-controller
    ports:
    - protocol: TCP
      port: 50000
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 443
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: jenkins-controller
    ports:
    - protocol: TCP
      port: 8080
